# linear

./: Cargo.toml  README.md  prepare_dylint.bash  rust-toolchain.toml
src/: lib.rs  linear_lint.rs
