[package]
name = "linear"
version = "0.1.0"
authors = ["Aatif Syed"]
description = "Linear types in Rust"
edition = "2021"
publish = true

[dependencies]
anyhow = "1.0.49"

[dev-dependencies]

[build-dependencies]
anyhow = "1.0.49"
cargo-toolchain = "0.1.0"

[package.metadata.rust-analyzer]
rustc_private = true
